--- a/back/package.json
+++ b/back/package.json
@@ -18,11 +18,10 @@
   "homepage": "https://github.com/Xety/groupomania#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "jsonwebtoken": "^8.5.1",
+    "express-session": "^1.17.3",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.20.1"
