--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,9 @@
     "@fortawesome/angular-fontawesome": "^0.10.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@popperjs/core": "^2.11.5",
+    "autoprefixer": "10.4.5",
+    "bootstrap": "^5.2.0",
     "ngx-toastr": "^14.3.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
